# swim-class-checker

./: .gitignore  README.md  check_for_places.bat  check_for_places.py  check_for_places.sh  class_check_funcs.py  cronjobs.txt  crontest.sh  daily_summary.bat  daily_summary.py  daily_summary.sh  email_funcs.py  main.py  platform_funcs.py  pyproject.toml
